# automata

./: .gitignore  README.md  adf  go.mod  go.sum  main.go  make
go-wasm/: main.go
qrweb/: play.go
references/online-voice-recorder.com/: recorder-worker.js
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
static/: PitchNode.js  PitchProcessor.js  SetupAudio.js  gorust-wasm-test.html  main.html  qr.js  rust-wasm.js
static/smplz/: tv_angel_bass_0.flac  tv_angel_drums_0.flac  tv_angel_guitar_0.flac
