[package]
name = "wasm"
version = "0.1.0"
authors = ["pete kim <petehyunsikkim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # produces .so files on linux, no entry through main()

[dependencies]
wasm-bindgen = "0.2.70"
wee_alloc = { version = "0.4.5", optional = true }
