[package]
name = "wasm"
version = "0.1.0"
authors = ["pete kim <petehyunsikkim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # produces .so files on linux, no entry through main()

[dependencies]
wasm-bindgen = "0.2.70"
pitch-detection = "0.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioBufferSourceNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

